syntax = "proto3";

option csharp_namespace = "TransactionProcessing.Server.Protos";

import "google/protobuf/timestamp.proto";

service SpoolPendingTransactions {
  rpc FetchTransactions (PendingTransactionsRequest) returns (stream Transaction);
}

message PendingTransactionsRequest{

}
message Transaction {
  int32 transaction_id = 1;
  int64 amount = 2;
  string sender_ref = 3;
  string receiver_ref = 4;
  bool is_completed = 5;
  google.protobuf.Timestamp create_date = 6;
  google.protobuf.Timestamp processed_date = 7;
  
}

message ProcessingStatus {
  bool isSuccess = 1;
}
